expire method, fixes
