# pkg/user_api/user.pb.validate.go
@@ -99,40 +99,6 @@ func (m *ModifySegmentsRequest) validate(all bool) error {
 
 	}
 
-	for idx, item := range m.GetExpirationTime() {
-		_, _ = idx, item
-
-		if all {
-			switch v := interface{}(item).(type) {
-			case interface{ ValidateAll() error }:
-				if err := v.ValidateAll(); err != nil {
-					errors = append(errors, ModifySegmentsRequestValidationError{
-						field:  fmt.Sprintf("ExpirationTime[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			case interface{ Validate() error }:
-				if err := v.Validate(); err != nil {
-					errors = append(errors, ModifySegmentsRequestValidationError{
-						field:  fmt.Sprintf("ExpirationTime[%v]", idx),
-						reason: "embedded message failed validation",
-						cause:  err,
-					})
-				}
-			}
-		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
-			if err := v.Validate(); err != nil {
-				return ModifySegmentsRequestValidationError{
-					field:  fmt.Sprintf("ExpirationTime[%v]", idx),
-					reason: "embedded message failed validation",
-					cause:  err,
-				}
-			}
-		}
-
-	}
-
 	_ModifySegmentsRequest_SlugToRemove_Unique := make(map[string]struct{}, len(m.GetSlugToRemove()))
 
 	for idx, item := range m.GetSlugToRemove() {
@@ -458,6 +424,141 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = GetSegmentsResponseValidationError{}
+
+// Validate checks the field values on SetExpireTimeRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *SetExpireTimeRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on SetExpireTimeRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// SetExpireTimeRequestMultiError, or nil if none found.
+func (m *SetExpireTimeRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *SetExpireTimeRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Id
+
+	// no validation rules for Slug
+
+	if all {
+		switch v := interface{}(m.GetExpirationTime()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, SetExpireTimeRequestValidationError{
+					field:  "ExpirationTime",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, SetExpireTimeRequestValidationError{
+					field:  "ExpirationTime",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetExpirationTime()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return SetExpireTimeRequestValidationError{
+				field:  "ExpirationTime",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
+	if len(errors) > 0 {
+		return SetExpireTimeRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// SetExpireTimeRequestMultiError is an error wrapping multiple validation
+// errors returned by SetExpireTimeRequest.ValidateAll() if the designated
+// constraints aren't met.
+type SetExpireTimeRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m SetExpireTimeRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m SetExpireTimeRequestMultiError) AllErrors() []error { return m }
+
+// SetExpireTimeRequestValidationError is the validation error returned by
+// SetExpireTimeRequest.Validate if the designated constraints aren't met.
+type SetExpireTimeRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e SetExpireTimeRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e SetExpireTimeRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e SetExpireTimeRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e SetExpireTimeRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e SetExpireTimeRequestValidationError) ErrorName() string {
+	return "SetExpireTimeRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e SetExpireTimeRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sSetExpireTimeRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = SetExpireTimeRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = SetExpireTimeRequestValidationError{}
 
 // Validate checks the field values on AddUserRequest with the rules defined in
 // the proto definition for this message. If any rules are violated, the first
